--- a/css/index.css
+++ b/css/index.css
@@ -144,3 +144,87 @@ footer nav a {
     color: white;
     text-decoration: none;
 }
+
+body {
+    
+    width: 800px;
+    margin: 0% 10% 0% 20%;
+}
+
+.header {
+   
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    margin-bottom: 5%;
+
+}
+
+nav {
+   
+    width: 80%;
+    margin-top: 3%;
+    padding-top:2%;
+}
+  
+
+nav a {
+    padding-left: 10%;
+    text-decoration: none;
+    color: black;
+  
+}
+.bottom-content {
+    margin-top: 5%;
+}
+.logo {
+    margin-top: 3%;
+}
+
+.jumbo {
+    margin-bottom: 5%;
+}
+
+.top-content {
+    border-bottom: 1px dotted black;
+}
+
+#box-one {
+    background-color: teal
+}
+
+#box-two {
+    background-color: gold;
+}
+
+.#box-three {
+    background-color: cadetblue;
+}
+
+#box-four {
+    background-color: coral;
+}
+
+#box-five {
+    background-color: crimson;
+}
+
+#box-six {
+    background-color: forestgreen;
+}
+
+#box-seven {
+    background-color: darkorchid;
+}
+
+#box-eight {
+    background-color: hotpink;
+}
+
+#box-nine {
+    background-color: indigo;
+}
+
+#box-ten {
+    background-color: dodgerblue;
+}
